# TeachBooks

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
book/: _config.yml  chapter1.md
book/.teachbooks/server/: state.pickle
book/_build/.doctrees/: chapter1.doctree  chapter2.doctree  environment.pickle  index.doctree
book/_build/html/: .buildinfo  chapter1.html  chapter2.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/: _config.yml  intro.md
docs/source/: api.rst  conf.py  index.rst
docs/source/api/: publish.rst  release.rst  server.rst
docs/source/cli/: cli.rst
psor_books/cli/: main.py
psor_books/plugins/pybtex/names/: firstlast.py
src/plugins/pybtex/labels/: apa.py
src/plugins/sphinxcontrib_bibtex/style/referencing/: author_year_apa.py
teachbooks/: __init__.py  publish.py  release.py  serve.py
teachbooks/cli/: main.py
tests/: test_build.py  test_cli_build.py  test_cli_serve.py  test_server.py
tests/books/01/: _config.yml  _toc.yml  chapter2.md  index.md
tests/books/02/: _config.yml  chapter1.md
tests/books/02/_ext/pybtexapastyle/labels/: apa.py
