[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "citg_jb_stack"
version = "0.0.2"
description = "TU Delft CiTG Jupyter Book Software Stack"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Caspar Jungbacker", email = "c.a.a.jungbacker@tudelft.nl"}
]
classifiers = [
  "Programming Language :: Python :: 3",
]
dependencies = [
  "pydata-sphinx-theme ~= 0.13.1",
  "jupyter-book ~= 0.15",
  "numpy",
  "matplotlib",
  "scipy",
  "pandas"
]

[tool.setuptools.packages]
find = {}

[project.urls]
"Homepage" = "https://gitlab.tudelft.nl/interactivetextbooks-citg/extensions/tud-citg-jb-soack"

[project.entry-points."pybtex.style.formatting"]
apa = "src.plugins.pybtex.formatting.apa:APAStyle"

[project.entry-points."pybtex.style.labels"]
apa = "src.plugins.pybtex.labels.apa:APALabelStyle"

[project.entry-points."pybtex.style.names"]
firstlast = "src.plugins.pybtex.names:FirstLastStyle"

[project.entry-points."sphinxcontrib.bibtex.style.referencing"]
author_year_round = "src.plugins.sphinxcontrib_bibtex.style.referencing.author_year_apa:AuthorYearRoundReferenceStyle"
